# par_prog

1_task/: hello  hello.c  round_robin.c  spin_me  sum
2_task/: exponent.c  exponent.h  main.c
3_task/: comm.c  sends.c
e_calc/: exponent.c  exponent.h
game_of_life/: CMakeLists.txt
game_of_life/libs/: game_of_life.hh
game_of_life/srcs/: game_of_life.cc  main.cc
lab/: CMakeLists.txt  main.cc  transfer_equation.cc  transfer_equation.hh
lab_1/: CMakeLists.txt  main.cc  perf.cc  transfer_equation.cc  transfer_equation.hh
lab_2/: parallel.c  parametrs.h  parralel.c  perf.sh  seq.c  stack_t.c  stack_t.h
new_meta/: file.c  minimal.c  one_sided.c
nullptr/: hello.c  round_robin.c
sort_it/: main.c  sort.c  sort.h
threads_nullptr/: harmonic.c  hello.c  snowball.c
